Remove fixed height on What's New image and fix modal size on mobile

--- a/components/sidebar/sidebar_whats_new_modal/sidebar_whats_new_modal.scss
+++ b/components/sidebar/sidebar_whats_new_modal/sidebar_whats_new_modal.scss
@@ -3,8 +3,6 @@
 .GenericModal {
     width: 692px;
 
-    
-    
     .modal-content {
         padding: 16px 15px;
     }
@@ -15,10 +13,8 @@
 
     .SidebarWhatsNewModal__img {
         margin-top: 40px;
-        height: 360px;
         border: 1px solid var(--center-channel-color-16);
         border-radius: 4px;
-        min-height: 360px;  // TODO: remove
     }
 
     .modal-footer {
@@ -26,6 +22,14 @@
     }
 }
 
-.modal .GenericModal.modal-dialog {
-    margin-top: calc(50vh - 307px);
+// Styles to override global styles
+.modal {
+    .GenericModal.modal-dialog {
+        height: unset;
+        margin-top: calc(50vh - 307px);
+    }
+
+    .GenericModal .modal-footer {
+        position: relative;
+    }
 }
